@@ -5,26 +5,36 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Example;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import lombok.extern.log4j.Log4j2;
+import shop.yongatae.club.entity.Likes;
 import shop.yongatae.club.entity.Member;
 import shop.yongatae.club.entity.Note;
+import shop.yongatae.club.entity.composite.LikesId;
+import shop.yongatae.club.repository.LikesRepository;
 import shop.yongatae.club.repository.MemberRepository;
 import shop.yongatae.club.repository.NoteRepository;
 import shop.yongatae.club.security.dto.NoteDto;
 
 @Service
+@Log4j2
 public class NoteServiceImpl implements NoteService{
   @Autowired
   private NoteRepository repository;
   @Autowired
-  private MemberRepository repository2;
+  private MemberRepository memberRepository;
+  @Autowired
+  private LikesRepository likesRepository;
 
   @Override
   @Transactional
   public Optional<NoteDto> get(Long num) {
-    return repository.findById(num).map(this::toDto);
+    Long count = likesRepository.count(Example.of(Likes.builder().note(Note.builder().num(num).build()).build()));
+    log.info(count);
+    return repository.findById(num).map(this::toDto).map(d -> {d.setLikesCnt(count);return d;});
   }
 
   @Override
@@ -35,7 +45,7 @@ public class NoteServiceImpl implements NoteService{
 
   @Override
   public Long register(NoteDto dto) {
-    Member member = repository2.findByEmail(dto.getWriter());
+    Member member = memberRepository.findByEmail(dto.getWriter());
     dto.setMno(member.getMno());
     Note note = toEntity(dto);
     repository.save(note);
@@ -50,15 +60,22 @@ public class NoteServiceImpl implements NoteService{
 
   @Override
   public List<NoteDto> list(String email) {
-      return repository.findByMemberEmail(email)
-              .stream()
-              .map(note -> toDto(note))
-              .collect(Collectors.toList());
+    return repository.findNote(email).stream().map(p -> {
+    NoteDto dto = toDto((Note)p[0]);
+    dto.setLikesCnt((Long)p[1]);
+    dto.setAttachCnt((Long)p[2]);
+    return dto;
+    }).toList();
   }
 
   @Override
   public List<NoteDto> listAll() {
-    return repository.findAll().stream().map(this::toDto).toList();
+    return repository.findNotes().stream().map(p -> {
+      NoteDto dto = toDto((Note)p[0]);
+      dto.setLikesCnt((Long)p[1]);
+      dto.setAttachCnt((Long)p[2]);
+      return dto;
+      }).toList();
   }
 
   
